--- a/package.json
+++ b/package.json
@@ -138,7 +138,6 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-polyfill": "^6.26.0"
   }
 }
